--- a/package.json
+++ b/package.json
@@ -57,5 +57,10 @@
   },
   "files": [
     "dist"
-  ]
+  ],
+  "dependencies": {
+    "copy-text-to-clipboard": "^1.0.4",
+    "react-icons": "2.2.7",
+    "styled-components": "^4.0.3"
+  }
 }
